# Emul8tor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  chip8.c  emul8tor.c
include/: beeper.h  chip8.h  display.h  opcode.h
src/: beeper.c  chip8.c  display.c  main.c  opcode.c
